[package]
name = "melblkidx"
version = "0.3.19"
edition = "2021"
description="Block indexer for Themelio"
license = "MPL-2.0"
repository="https://github.com/themeliolabs/melblkidx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
concurrent-queue = "1.2.2"
genawaiter = "0.99.1"
hex = "0.4.3"
itertools = "0.10.3"

log = "0.4.17"
once_cell = "1.13.0"
parking_lot = "0.12.1"
rusqlite = "0.27.0"
serde_json = "1.0.82"
smol = "1.2.5"
smolscale = "0.3.29"
stdcode = "0.1.7"
tap = "1.0.1"
themelio-bootstrap = "0.6.0"
themelio-nodeprot = "0.11.3"
themelio-structs = "0.2.5"
tmelcrypt = "0.2.4"

[dev-dependencies]
env_logger = "0.9.0"
