[package]
name = "melblkidx"
version = "0.5.1"
edition = "2021"
description="Block indexer for Themelio"
license = "MPL-2.0"
repository="https://github.com/themeliolabs/melblkidx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
concurrent-queue = "1.2.4"
genawaiter = "0.99.1"
hex = "0.4.3"
itertools = "0.10.5"

log = "0.4.17"
once_cell = "1.15.0"
parking_lot = "0.12.1"
rusqlite = "0.27.0"
serde_json = "1.0.85"
smol = "1.2.5"
smolscale = "0.3.41"
stdcode = "0.1.10"
tap = "1.0.1"
# themelio-bootstrap = "0.6.1"
themelio-bootstrap = { path = "../themelio-bootstrap" }
themelio-nodeprot = "0.12.0"
themelio-structs = "0.2.10"
tmelcrypt = "0.2.4"

[dev-dependencies]
env_logger = "0.9.1"
melnet2 = "0.1.4"
